# caikit

./: .coveragerc  .gitignore  .isort.cfg  .prettierignore  .readthedocs.yaml  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  OWNERS  README.md  SECURITY.md  code-of-conduct.md  docs-requirements.txt  modules.json  otel_tracing_requirements.txt  pyproject.toml  releases.md  requirements.txt  requirements_test.txt  setup.py  setup_requirements.txt  task.md  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  user_story.md
.github/workflows/: build-library.yml  codeql.yaml  lint-code.yml  publish-library.yml
caikit/: __init__.py  version.py
caikit/config/: __init__.py  config.py  config.yml
caikit/core/: __init__.py  domain.py  model_manager.py  module.py  module_backend_config.py  module_config.py  module_meta.py  module_type.py  registries.py  task.py
caikit/core/augmentors/: __init__.py  base.py  merged_augmentor.py
caikit/core/blocks/: __init__.py  base.py
caikit/core/concurrency/: destroyable_process.py  pickling_exception.py
caikit/core/config/: __init__.py  config.py
caikit/core/data_model/: __init__.py  background_status.py  base.py  dataobject.py  enums.py  inference_status.py  job.py  job_status.py  json_dict.py  package.py  predict_status.py  prediction_status.py  producer.py  runtime_context.py  task_decorator.py  timestamp.py  training_info.py  training_state.py  training_status.py
caikit/core/exceptions/: __init__.py  caikit_core_exception.py  error_handler.py  validation_error.py
caikit/core/model_management/: __init__.py  factories.py  job_base.py  job_predictor_base.py  local_background_base.py  local_job_base.py  local_job_predictor.py  local_model_finder.py  local_model_inferencer.py  local_model_initializer.py  local_model_loader.py  local_model_saver.py  local_model_trainer.py  model_background_base.py  model_background_inferencer_base.py  model_finder_base.py  model_initializer_base.py  model_loader_base.py  model_saver.py  model_saver_base.py  model_trainer_base.py  multi_model_finder.py  multi_model_initializer.py  remote_model_finder.py  remote_model_initializer.py  train_executor_base.py  trainer_base.py
caikit/core/module_backends/: __init__.py  backend_types.py  base.py  local_backend.py  module_backend_config.py
caikit/core/modules/: __init__.py  base.py  config.py  decorator.py  loader.py  meta.py  remote_config.py  saver.py
caikit/core/resources/: __init__.py  base.py
caikit/core/signature_parsing/: __init__.py  docstrings.py  module_signature.py  parsers.py
caikit/core/toolkit/: __init__.py  compatibility.py  config_utils.py  destroyable.py  destroyable_process.py  destroyable_thread.py  error_handler.py  extension_utils.py  factory.py  fileio.py  isa.py  logging.py  name_tools.py  performance_metrics.py  quality_evaluation.py  reversible_hasher.py  serializers.py  sync_to_async.py  wip_decorator.py
caikit/core/workflows/: __init__.py  base.py
caikit/interfaces/: __init__.py
caikit/interfaces/common/: __init__.py
caikit/interfaces/nlp/: __init__.py  embedding_tasks.py  rerank_task.py  sentence_similarity_task.py  tasks.py
caikit/interfaces/runtime/: __init__.py  server.py  service.py
caikit/interfaces/ts/: __init__.py  tasks.py
caikit/interfaces/vision/: __init__.py  tasks.py
caikit/runtime/: __init__.py  __main__.py  dump_services.py  grpc_server.py  health_probe.py  http_server.py  names.py  server_base.py  service_factory.py  trace.py  train.py
caikit/runtime/client/: __init__.py  remote_config.py  remote_model_finder.py  remote_model_initializer.py  remote_module_base.py  utils.py
caikit/runtime/config/: config.yml
caikit/runtime/grpc/: grpc_server.py
caikit/runtime/grpc_server/: __init__.py  __main__.py  grpc_server.py
caikit/runtime/http/: __main__.py  http_server.py  pydantic_wrapper.py  request_aborter.py
caikit/runtime/http_server/: __init__.py  __main__.py  http_server.py  pydantic_wrapper.py  request_aborter.py  utils.py
caikit/runtime/interceptors/: caikit_runtime_server_wrapper.py
caikit/runtime/metrics/: rpc_meter.py  throughput.py
caikit/runtime/model_management/: batcher.py  core_model_loader.py  directory_model_sizer.py  factories.py  loaded_model.py  mm_model_sizer.py  model_loader.py  model_loader_base.py  model_manager.py  model_sizer.py  model_sizer_base.py  training_manager.py
caikit_health_probe/: __main__.py
docs/: conf.py  index.rst
docs/POPs/: 001-domains-tasks-and-couplers.md
docs/adrs/: 001-module.md  010-data-model-definition.md  015-runtime-service-generation.md  018-shared-backends.md  019-loader-stack.md  020-model-management-abstractions.md  021-http-server.md  022-pluggable-runtime-io.md  023-info-service-endpoint.md  024-remote-module-invocation.md  README.md
docs/api/: data_model.rst  index.rst
docs/architecture_club/: 04-25-23.md  README.md
docs/source/: conf.py
examples/: start_runtime_with_sample_lib.py
examples/sample_lib/: README.md  client.py  client_proto.py  requirements.txt  start_runtime_with_sample_lib.py
examples/text-sentiment/: .dockerignore  Dockerfile  Dockerfile.gateway  Dockerfilegateway  README.md  client.py  generate_protos.py  requirements.txt  start_runtime.py
scripts/: check_deps.sh  dsconverter.py  test_dsconverter.py
tests/: __init__.py  base.py  conftest.py  data_model_helpers.py  test_caikit_health_probe.py
tests/config/: test_configs.py
tests/core/: helpers.py  test_config.py  test_imports.py  test_model_manager.py  test_module.py  test_module_backend_config.py  test_module_metadata.py  test_module_type.py  test_no_write_permissions.py  test_task.py
tests/examples/: shared.py  test_examples.py
tests/fixtures/: __init__.py  dummy_dataset.json  fixtures.py  linux.txt  primitive_party.proto  sample.csv
tests/interfaces/: test_tasks.py
tests/runtime/: conftest.py  test_caikit_health_probe.py  test_dump_services.py  test_grpc_server.py  test_health_probe.py  test_http_server.py  test_service_factory.py  test_trace.py  test_train.py
(+411 files in other folders)
