[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "caikit"
# Not the actual current version: overwritten by CI
version = "0.0.1"
description = "AI toolkit that enables AI users to consume stable task-specific model APIs and enables AI developers build algorithms and models in a modular/composable framework"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.8"
classifiers=[
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "alchemy-config>=1.1.1,<2.0.0",
    "alchemy-logging>=1.0.4,<2.0.0",
    "anytree>=2.7.0,<3.0",
    "docstring-parser>=0.14.1,<0.16.0",
    "grpcio-health-checking>=1.35.0,<2.0",
    "grpcio>=1.35.0,<2.0",
    "ijson>=3.1.4,<3.3.0",
    "import-tracker>=3.1.5,<4",
    "munch>=2.5.0,<4.0",
    "numpy>=1.23.5,<2",
    "prometheus_client>=0.12.0,<1.0",
    "protobuf>=3.19.0,<5",
    "py-grpc-prometheus>=0.7.0,<0.8",
    "py-to-proto>=0.2.0,<0.3.0",
    "PyYAML>=6.0,<7.0",
    "requests>=2.26.0,<3.0",
    "semver>=2.13.0,<4.0",
    "six>=1.16.0,<2.0.0",
    "tqdm>=4.59.0,<5.0.0",
]

[project.urls]
Source = "https://github.com/caikit/caikit"
