[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "caikit"
# Not the actual current version: overwritten by CI
version = "0.0.1"
description = "AI toolkit that enables AI users to consume stable task-specific model APIs and enables AI developers build algorithms and models in a modular/composable framework"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers=[
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "alchemy-config>=1.1.1,<2.0.0",
    "alchemy-logging>=1.0.4,<2.0.0",
    "anytree>=2.7.0,<3.0",
    "docstring-parser>=0.14.1,<0.16.0",
    "grpcio>=1.35.0,<2.0,!=1.55.0",
    "ijson>=3.1.4,<3.3.0",
    "munch>=2.5.0,<5.0",
    "numpy>=1.22.2,<2",
    "protobuf>=3.19.0,<5",
    "py-to-proto>=0.5.0,<0.6.0,!=0.2.1",
    "PyYAML>=6.0,<7.0",
    "semver>=2.13.0,<4.0",
    "six>=1.16.0,<2.0.0",
    "tqdm>=4.59.0,<5.0.0",
    "werkzeug>=2.3.7,<4.0.0"
]

[project.optional-dependencies]

## Runtime Extra Sets ##

runtime-grpc = [
    "grpcio-health-checking>=1.35.0,<2.0",
    "grpcio-reflection>=1.35.0,<2.0",
    "prometheus_client>=0.12.0,<1.0",
    "py-grpc-prometheus>=0.7.0,<0.8",
]

runtime-http = [
    "fastapi[all]>=0.100,<1",
    "sse-starlette>=1.6.1,<2",
]

interfaces-vision = [
    "pillow>=6.2.1,<11.0"
]

# NOTE: This is "all" from the user perspective, not the dev perspective
all = [
    "caikit[runtime-grpc, runtime-http, interfaces-vision]",
]

## Dev Extra Sets ##

dev-test = [
    "pytest-asyncio>=0.21.0,<1",
    "pytest-cov>=2.10.1,<5.0",
    "pytest-html>=3.1.1,<5.0",
    "pytest>=6.2.5,<8.0",
    "requests>=2.28.2,<3",
    "tls_test_tools>=0.1.1",
    "wheel>=0.38.4",
    "caikit[interfaces-vision]",
]

dev-docs = [
    "sphinx>=4.0.2,<8.0",
    "sphinx-autoapi>=2.1.0",
    "sphinx-rtd-theme>=1.2.1,<1.4.0",
]

dev-fmt = [
    "pre-commit>=3.0.4,<4.0",
    "pylint>=2.16.2,<4.0",
    "pydeps>=1.12.12,<2",
]

dev-build = [
    "flit==3.9.0",
]

# NOTE: This is "all" from the user and dev perspective
all-dev = [
    "caikit[all, dev-test, dev-docs, dev-fmt, dev-build]"
]

[project.urls]
Source = "https://github.com/caikit/caikit"

[tool.pytest.ini_options]
markers = [
    "examples: marks tests as e2e examples (deselect with '-m \"not examples\"')",
]
